* Fix clipping DropDown list element by Import rules dialog on iOS Safari

--- a/src/view/Components/Import/RulesDialog/Dialog/style.scss
+++ b/src/view/Components/Import/RulesDialog/Dialog/style.scss
@@ -1,8 +1,11 @@
 /* Import rules dialog */
 .rules-popup {
+  background: none;
+
   .popup__wrapper {
     position: relative;
     align-items: flex-start;
+    background: var(--popup-dim-bg);
   }
 
   .popup__content-box {
